# grpc-gateway

./: WORKSPACE
internal/: BUILD.bazel
protoc-gen-grpc-gateway/descriptor/: BUILD.bazel
runtime/: BUILD.bazel
